<resources>
    <string name="app_name">MBA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="forgot_password">Forgot pin?</string>
    <string name="ask_pin">Enter Pin</string>
    <string name="setup_profile">Set your profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_mobile">Mobile Nos(separated by comma)</string>
    <string name="lbl_bil_header">Order Page Header</string>
    <string name="profile_company">Company Name</string>
    <string name="profile_address">Address</string>
    <string name="profile_pin">Pin</string>
    <string name="profile_confirm_pin">Confirm Pin</string>
    <string name="profile_old_pin">Old Pin</string>
    <string name="profile_new_pin">New Pin</string>
    <string name="save_profile">Save</string>
    <string name="item_name">Item Name</string>
    <string name="btn_add">ADD</string>
    <string name="btn_add_new">New</string>
    <string name="txtvw_item">Items</string>
    <string name="spr_order_name">Select a order</string>
    <string name="lbl_order">Order Name</string>
    <string name="lbl_order_qty">Item Quantity</string>
    <string name="lbl_order_suggestion">Suggestions</string>
    <string name="btn_print">Print</string>
    <string name="lbl_manage_customer">Manage Customer</string>
    <string name="lbl_customer_place">Place</string>
    <string name="lbl_customer">Customer Name</string>
    <string name="lbl_mobile">Mobile No</string>
    <string name="lbl_manage_employee">Manage Employee</string>
    <string name="lbl_manage_trans">Xyz sjdbf ksbd  kisndf \n 9374635364\n Salary Pending: 50000 \t Advance: 23423</string>
    <string name="transaction_Date">Transaction Date</string>
    <string name="transaction_Type">Transaction Type</string>
    <string name="select_transaction">Select Transaction Type</string>
    <string name="trans_Amt">Amount</string>
    <string name="lbl_employee">Employee Name</string>
    <string name="lbl_trans_desc">Desc</string>
    <string name="btn_backup">BackUp</string>
    <string name="btn_restore">Restore</string>
    <string name="lbl_off_backup">Offline Backup</string>
    <string name="lbl_off_restore">Offline Restore</string>
    <string name="backup_string">
        1. Only when you connect internet, backup/restore operation performed. \n
        2. We are using your google drive account to store your transaction data. \n
        3. We are using your google drive account so your transaction details are safe. \n
        4. Only you can access details via this app. \n
        5. Please do regular backup inorder to keep your transactions safety. \n
    </string>
    <string name="Title">My Business Assistant</string>
    <string name="app">App Name \t: \tMBA</string>
    <string name="version">Version\t   :   \t1.0</string>
    <string name="app_desc">App under development!!!!</string>
    <string name="developer">Developed by Guna</string>
    <string name="developer_email">gunasekaran.arts@gmail.com</string>
    <string-array name="customers">
        <item>General Bill</item>
    </string-array>
    <string-array name="salary_trans_type">
        <item>Salary</item>
        <item>Advance Salary</item>
        <item>Salary Paid</item>
        <item>Advance Return</item>
    </string-array>

</resources>
