<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_press"
            android:text="@string/btn_backup"
            android:textColor="@color/white"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_restore"
            android:textColor="@color/white"
            android:background="@drawable/button_press"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_off_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/lbl_off_backup"
            android:textColor="@color/white"
            android:background="@drawable/button_press"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_off_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/lbl_off_restore"
            android:textColor="@color/white"
            android:background="@drawable/button_press"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/backup_string" />

</LinearLayout>