<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spr_customers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/customers"
                >
            </android.support.v7.widget.AppCompatSpinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:weightSum="10"
            >
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spr_orders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                </android.support.v7.widget.AppCompatSpinner>
            <!--app:ms_multiline="false"-->
            <!--app:ms_hint="@string/spr_order_name"-->
            <!--app:ms_enableFloatingLabel="true"-->
            <!--app:ms_enableErrorLabel="true"-->
            <!--app:ms_floatingLabelText="@string/lbl_order"-->
            <!--app:ms_errorColor="@color/red"-->
            <!--</fr.ganfra.materialspinner.MaterialSpinner>-->

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_add_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btn_add_new"
                android:background="@drawable/button_press"
                android:padding="2dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            >
            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/auto_txt_itemname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_order_qty"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_suggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_order_suggestion"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:text="@string/btn_add"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="5"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_print"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/btn_print"
            android:layout_weight="5"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_order_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9.5"
                >
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
</LinearLayout>