<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addresstxt"
                android:hint="@string/item_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:background="@drawable/button_press"
            android:padding="2dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtvw_item"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="@dimen/default_text_size"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/masterItemList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>
</LinearLayout>