<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_manage"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_manage_customer"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/darkgrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txt_customerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addresstxt"
                    android:hint="@string/lbl_customer"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/default_text_size" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txt_customer_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addresstxt"
                    android:hint="@string/lbl_customer_place"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/default_text_size" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_customerMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/addresstxt"
                        android:hint="@string/lbl_mobile"
                        android:inputType="number"
                        android:maxLength="13"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/default_text_size" />
                </android.support.design.widget.TextInputLayout>
                <CustomWidget.TextAwesome
                    android:id="@+id/txt_pick_contact"
                    android:layout_weight=".05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/txt_personview"
                    android:layout_alignParentEnd="true"
                    android:textSize="50dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/fa_user" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.9"
                android:background="@drawable/button_press"
                android:padding="5dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="Save" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>